Fix overflow issue with project list item

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -106,7 +106,6 @@ form {
   }
 
   .project-list-header {
-    width: 60%;
     a {
       margin-top: 3px;
       margin-right: 15px;
